--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,9 +6,37 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>PDA MIT</title>
         <!-- Pre-build CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <!-- Custom CSS -->
         <link rel="stylesheet" href="css/styles.css">
         <!-- fontawesome icon script -->
         <script src="https://kit.fontawesome.com/cb38b9c56f.js" crossorigin="anonymous"></script>
     </head>
     <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="img/pda-logo.png">PDA</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarScroll">
+                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./about">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./contact">Events</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./contact">Contact</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./contact">Login /Sign Up</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
